# Open-Source-Geospatial-Ecosystem

./: .gitattributes  .gitignore  LUP_Overview.html  README.md  app_deploy.yaml  docker-compose.yml
.github/workflows/: .deployer.yml  merge.yml  pr-close.yml  pr-open.yaml  pr-open.yml
Web Map/: Data_Souces.xlsx  readme.md
WebMap/: LUP_Overview.html  data_source.md  readme.md
WebMap/Examples/: BC_Folium_test.py  folium_glify_test.ipynb
WebMap/Examples/flask_app/: Docker-compose.yaml  Dockerfile  app.py  feature_download.py  readme.md  requirements.txt
WebMap/Examples/flask_app/app/: app.py  feature_download.py
WebMap/Examples/flask_app/blueprints/: intersect.py  map.py  overview_map.py
WebMap/Examples/flask_app/static/: style.css
WebMap/Examples/flask_app/templates/: index.html  intersect_template.html  overview.html
WebMap/Examples/flask_mapLibre/: Dockerfile
WebMap/Examples/flask_mapLibre/app/: app.py
WebMap/Examples/flask_minimal/: Dockerfile  requirements.txt
WebMap/Examples/folium/lup_overview/: feature_download.py
WebMap/Examples/leaflet/: app.py  datasets.json  layer_from_NL.py  load_wfs_on_button_click.html  load_wms_on_button_click.html  modified_checkbox_example.html  overview_from_json_map.html  overview_map.html
WebMap/lup_overview/: LUP_Map.py
WebMap/src/: super_secrets.py
WebMap/src/app/: app.py
WebMap/src/app/blueprints/: intersect.py  overview_map.py
WebMap/src/lup_overview/: LUP_Map.py  LUP_Overview.html  LUP_Overview2.ipynb  LUP_Overview2.py  feature_download.py
backend/: Dockerfile  README.md  app.py  pyproject.toml
backend/blueprints/: intersect.py  overview_map.py
backend/osgeo_app/: app.py  main.py
backend/osgeo_app/blueprints/: intersect.py  overview_map.py
backend/osgeo_app/templates/static/: layers.json  lup_intersect.html  lup_overview.html  style.css
backend/osgeo_app/templates/templates/: index.html  intersect.html  overview.html
backend/templates/static/: layers.json  lup_intersect.html  lup_overview.html  style.css
backend/templates/templates/: index.html  intersect.html  overview.html
charts/app/: Chart.yaml  values.yaml
charts/app/templates/: knp.yaml  secret.yaml
charts/osgis/templates/: deployment.yaml  service.yaml
charts_examples/osgis/: Chart.yaml  values.yaml
charts_examples/osgis/templates/: NOTES.txt  _helpers.tpl
frontend/: Caddyfile  Dockerfile
frontend/docs/: localdev.md
frontend/static/: layer_overview.json  layers.json  lup_intersect.html  lup_overview.html  style.css
frontend/templates/: index.html  intersect.html  overview.html
(+11 files in other folders)
