[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Cole Folkers <Cole.folkers@gov.bc.ca>"]
license = "apache"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.1.0"
Flask-Cors = "^5.0.0"
Flask-Caching = "^2.3.0"
requests = "^2.32.3"
geopandas = "^1.0.1"
shapely = "^2.0.6"
geojson = "^3.1.0"

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
ruff = "0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
