[tool.poetry]
name = "osgeo_app"
version = "0.1.0"
description = ""
authors = ["Cole Folkers <Cole.folkers@gov.bc.ca>"]
license = "apache"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.1.0"
Flask-Cors = "^5.0.0"
Flask-Caching = "^2.3.0"
requests = "^2.32.3"
geopandas = "^1.0.1"
shapely = "^2.0.6"
geojson = "^3.1.0"
gpxpy = "^1.6.2"
gunicorn = "^23.0.0"

pyproject-hooks = "1.0.0"
[tool.poetry.group.dev.dependencies]
black = "24.10.0"
ruff = "0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 80

[tool.black]
line-length = 80

# Ignore some errors in tests as they are not relevant
[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "S105", # local dev password fields are verified
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
